k8s/apps/quasar-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quasar-ingress
  annotations:
    kubernetes.io/ingress.class: alb  # For AWS ALB Ingress Controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: quasar-app
spec:
  ingressClassName: alb
  rules:
    - host: quasar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quasar-service
                port:
                  number: 9000
